feature : receipt and invoice refactor